--- a/test_01/main.html
+++ b/test_01/main.html
@@ -17,12 +17,10 @@
                 }
             }
 
-            document.write("<td>");
-            GuGuDan(1);
-            document.write("</td>");
-            document.write("<td>");
-            GuGuDan(2);
-            document.write("</td>");
+            for(var i=1; i<10; i++)
+            {
+                GuGuDan(i);
+            }
             
         </script>
         </table>
