--- a/test_01/main.html
+++ b/test_01/main.html
@@ -4,26 +4,19 @@
     <head>
         <meta charset="EUC-KR">
         <title>main</title>
+        <script type = "text/javascript" src = "..\test_01\_functions.js"></script>
     </head>
 
     <body>
-        <p> dkssu </p>
-        <table>
         <script type="text/javascript">
-            
-            var GuGuDan = num => {
-                for(var i = 1; i<10; i++){
-                    document.write(num + " x " + i + " = " + num*i + "<p>");
-                }
-            }
+            //GuGuDan(1);
+            var num;
+            var stac = new _Stack();
+            num = stac.add(2);
 
-            for(var i=1; i<10; i++)
-            {
-                GuGuDan(i);
-            }
+            document.write(num);
             
         </script>
-        </table>
     </body>
 
 </html>
