_functions.js push, pop function add and still in implementation

--- a/test_01/main.html
+++ b/test_01/main.html
@@ -12,9 +12,12 @@
             //GuGuDan(1);
             var num;
             var stac = new _Stack();
-            num = stac.add(2);
+            // num = stac.add(2);
 
-            document.write(num);
+            // document.write(num);
+
+            stac.push(1);
+            stac.push(2);
             
         </script>
     </body>
