_functions.js _stack class function add main.html still editing

--- a/test_01/main.html
+++ b/test_01/main.html
@@ -17,8 +17,14 @@
             // document.write(num);
 
             stac.push(1);
+            stac.push(3);
             stac.push(2);
+
+            stac.display();
             
+            stac.pop();
+            stac.display();
+
         </script>
     </body>
 
