--- a/test_01/main.html
+++ b/test_01/main.html
@@ -8,7 +8,15 @@
     </head>
 
     <body>
-        <script type="text/javascript">
+
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+
+        <img id="drag1" src="..\test_01\bogu.jpg" draggable="true" ondragstart="drag(event)" width="336" height="69">
+
+
+
+        
+        <!-- <script type="text/javascript">
             //GuGuDan(1);
             var num;
             var stac = new _Stack();
@@ -25,7 +33,7 @@
             stac.pop();
             stac.display();
 
-        </script>
+        </script> -->
     </body>
 
 </html>
