--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -9,9 +9,16 @@
     <body>
         <!-- http://www.soen.kr/html5/canvas/canvas.html -->
         <div>
-            <canvas id="canvas" width="500" height="500">
+            <canvas id="canvas" width="500" height="500"></canvas>
 
-            </canvas>
+            <script>
+                window.onload = function(){
+                    var canvas = document.getElementById("canvas");
+                    if(canvas == null || canvas.getContext == null) return;
+                    var ctx = canvas.getContext("2d");
+                    ctx.strokeRect(10,10,100,100);
+                }
+            </script>
         </div>
 
         <script src="canvas.js"></script>
