--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -3,24 +3,44 @@
     <head>
         <title>Canvas Painter</title>
         <style type="text/css">
-            cavas{border: 1px solid black};
+            canvas{border: 3px solid magenta};
         </style>
     </head>
     <body>
         <!-- http://www.soen.kr/html5/canvas/canvas.html -->
         <div>
+            <p> 캔버스에 직접 그린다 </p>
             <canvas id="canvas" width="500" height="500"></canvas>
 
             <script>
+
+                var canvas;
+                var ctx;
+
                 window.onload = function(){
-                    var canvas = document.getElementById("canvas");
+                    canvas = document.getElementById("canvas");
                     if(canvas == null || canvas.getContext == null) return;
-                    var ctx = canvas.getContext("2d");
-                    ctx.strokeRect(10,10,100,100);
+                    ctx = canvas.getContext("2d");
+                    draw();
                 }
+
+                function draw(){
+                    // draw rect
+                    // ctx.strokeRect(10,10,100,100);
+                    // ctx.fillRect(120,10,200,100);
+                    // ctx.clearRect(170,40,80,40);
+
+                    // draw line
+                    ctx.beginPath();
+                    ctx.moveTo(10,10);
+                    ctx.lineTo(500,300);
+                    ctx.stroke();
+                }
+
+                
             </script>
         </div>
 
-        <script src="canvas.js"></script>
+        
     </body>
 </html>
