--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -5,6 +5,7 @@
         <style type="text/css">
             canvas{border: 3px solid magenta};
         </style>
+        <script type = "text/javascript" src = "..\test_02(canvas)\canvas.js"></script>
     </head>
     <body>
         <!-- http://www.soen.kr/html5/canvas/canvas.html -->
@@ -22,6 +23,10 @@
                     if(canvas == null || canvas.getContext == null) return;
                     ctx = canvas.getContext("2d");
                     draw();
+                    //draw_closePath(2);
+                    //draw_pathrect();
+                    //draw_circle();
+                    //draw_pie();
                 }
 
                 function draw(){
@@ -31,11 +36,30 @@
                     // ctx.clearRect(170,40,80,40);
 
                     // draw line
-                    ctx.beginPath();
-                    ctx.moveTo(10,10);
-                    ctx.lineTo(500,300);
-                    ctx.stroke();
+                    // drawline(10,10,250,150);
+                    // drawline(10,10,50,150);
+                    
+                    ctx.strokeCircle(100,100,80);
+                    ctx.fillCircle(300,100,80);
                 }
+
+
+                // 원 매소드 정의
+                CanvasRenderingContext2D.prototype.strokeCircle = function(x,y,r){
+                    this.beginPath();
+                    this.arc(x,y,r,0,2*Math.PI);
+                    this.stroke();
+                }
+
+                CanvasRenderingContext2D.prototype.fillCircle = function(x,y,r){
+                    this.beginPath();
+                    this.arc(x,y,r,0,2*Math.PI);
+                    this.fill();
+                }
+
+
+
+
 
                 
             </script>
