canvas.js curve, triangle function add

--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -22,13 +22,16 @@
                     canvas = document.getElementById("canvas");
                     if(canvas == null || canvas.getContext == null) return;
                     ctx = canvas.getContext("2d");
-                    draw();
+                    //draw();
                     //draw_closePath(2);
                     //draw_pathrect();
                     //draw_circle();
                     //draw_pie();
                     //draw_arcTo();
                     //draw_roundarc();
+                    //draw_triangle();
+                    //draw_curve();
+                    draw_bezier();
                 }
 
                 function draw(){
@@ -50,6 +53,31 @@
                     ctx.fillRoundRect(150,10,120,100,30);
                 }
 
+                // 모서리가 둥근 삼각형
+                function draw_triangle(){
+                    ctx.beginPath();
+                    ctx.moveTo(14,152);
+                    ctx.arcTo(90,0,180,180,20);
+                    ctx.arcTo(180,180,0,180,20);
+                    ctx.arcTo(0,180,90,0,20);
+                    ctx.stroke();
+                }
+
+                // 2차 곡선
+                function draw_curve(){
+                    ctx.beginPath();
+                    ctx.moveTo(100,10);
+                    ctx.quadraticCurveTo(200,200,300,10);
+                    ctx.stroke();
+                }
+
+                // 3차 곡선
+                function draw_bezier(){
+                    ctx.beginPath();
+                    ctx.moveTo(10,10);
+                    ctx.bezierCurveTo(300,10,10,300,200,150);
+                    ctx.stroke();
+                }
 
 
                 
