--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -56,7 +56,8 @@
                     //draw_fillstyle();
                     //draw_fillstyle2();
                     //draw_gradienttext();
-                    draw_textalign();
+                    //draw_textalign();
+                    draw_image();
                 }
                 function draw(){
                     // draw rect
@@ -154,6 +155,14 @@
                     ctx.fillStyle = "red";
                     text = "작은글자";
                     ctx.fillText(text, x, 100);
+                }
+
+                function draw_image(){
+                    var img = new Image();
+                    img.src="bogu.jpg";
+                    img.onload = function(){
+                        ctx.drawImage(img, 50, 0, 150, 100);
+                    }
                 }
 
 
