--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -60,7 +60,8 @@
                     //draw_image();
                     //draw_image4();
                     //draw_png();
-                    draw_alpha();
+                    //draw_alpha();
+                    draw_imageshadow();
                 }
                 function draw(){
                     // draw rect
@@ -207,6 +208,18 @@
                         ctx.drawImage(img, 50, 50);
                         ctx.globalAlpha = 0.5;
                         ctx.drawImage(img, 200, 50);
+                    }
+                }
+
+                function draw_imageshadow(){
+                    var img = new Image();
+                    img.src = "cosmos.jpg";
+                    img.onload = function(){
+                        ctx.shadowColor="blue";
+                        ctx.shadowOffsetX=8;
+                        ctx.shadowOffsetY=8;
+                        ctx.shadowBlur = 12;
+                        ctx.drawImage(img,50,50);
                     }
                 }
 
